--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -14,6 +14,7 @@
   <noscript>
     <link rel="stylesheet" href="{{ url_for(theme.css) }}/noscript.css">
   </noscript>
+  <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage"{% if theme.motion.enable %} class="use-motion"{% endif %}>
