更新社交媒体
blog:find-dns-leak&修复已知问题

修复blog:find-dns-leak标签分隔

上传find-dns-leak的相关图片

Fix formatting in robots.txt

Correct formatting in robots.txt to properly disallow crawling.

优化了主题配置

优化了主题配置

test

test

test

修复了一些配置

修复关于一些目录404的问题

test

test

test

test

test

安装全部插件并配置，上传logo图片，配置gitalk

完成部分插件安装及配置

不使用proxy

更新readme.md与/about

???关闭评论，如需评论请在仓库发起

增加blog:fix-dns-leak

修复md屎山代码()

新增blog:fix-http-webdav

新增评论来源

更新赞赏加密货币收款码及新增quicklink

更新bsc.png路径，尝试本地cdn

本地cdn

切换zstatic

赞赏更新：支付宝和微信码

修复一些错误

Add Cloudflare analytics ID to config

Update analytics script in layout file

Replaced Vercel Insights script with Cloudflare Web Analytics script.

Update menu configuration and analytics settings

Update print statement from 'Hello' to 'Goodbye'

Update hexo version in package.json

Add caching headers for images and static assets

Remove unnecessary comments in vercel.json

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -14,7 +14,7 @@
   <noscript>
     <link rel="stylesheet" href="{{ url_for(theme.css) }}/noscript.css">
   </noscript>
-  <script defer src="/_vercel/insights/script.js"></script>
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "02045fccf216471184e81448797b3566"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage"{% if theme.motion.enable %} class="use-motion"{% endif %}>
