--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{{ url_for(theme.css) }}/noscript.css">
   </noscript>
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "02045fccf216471184e81448797b3566"}'></script><!-- End Cloudflare Web Analytics -->
+  <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage"{% if theme.motion.enable %} class="use-motion"{% endif %}>
