Add site verification meta tags for Baidu and 360

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -16,6 +16,8 @@
   </noscript>
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "02045fccf216471184e81448797b3566"}'></script><!-- End Cloudflare Web Analytics -->
   <script defer src="/_vercel/insights/script.js"></script>
+  <meta name="baidu-site-verification" content="codeva-FuIvtGJoyJ" />
+  <meta name="360-site-verification" content="0b6524e504a2c1865c05f4b983107d7c" />
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage"{% if theme.motion.enable %} class="use-motion"{% endif %}>
