Add 萌ICP link to footer in layout file

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -45,6 +45,7 @@
       {%- include '_partials/languages.njk' -%}
       {{ partial('_partials/footer.njk', {}, {cache: theme.cache.enable}) }}
     </div>
+    <a href="https://icp.gov.moe/?keyword=20260177" target="_blank">萌ICP备20260177号</a>
   </footer>
 
   {{ partial('_partials/widgets.njk', {}, {cache: theme.cache.enable}) }}
