萌ICP备案居中

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -45,7 +45,9 @@
       {%- include '_partials/languages.njk' -%}
       {{ partial('_partials/footer.njk', {}, {cache: theme.cache.enable}) }}
     </div>
-    <a href="https://icp.gov.moe/?keyword=20260177" target="_blank">萌ICP备20260177号</a>
+<div style="text-align: center; /* 实现水平居中 */">
+  <a href="https://icp.gov.moe/?keyword=20260177" target="_blank">萌ICP备20260177号</a>
+</div>
   </footer>
 
   {{ partial('_partials/widgets.njk', {}, {cache: theme.cache.enable}) }}
