Add Yandex verification meta tag

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -18,6 +18,7 @@
   <script defer src="/_vercel/insights/script.js"></script>
   <meta name="baidu-site-verification" content="codeva-FuIvtGJoyJ" />
   <meta name="360-site-verification" content="0b6524e504a2c1865c05f4b983107d7c" />
+  <meta name="yandex-verification" content="8c5995dc66b40cd5" />
   
   <!-- 新增：运行时长统计的样式 -->
   <style>
