SEO：爬虫网站图标标记

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -19,7 +19,7 @@
   <meta name="baidu-site-verification" content="codeva-FuIvtGJoyJ" />
   <meta name="360-site-verification" content="0b6524e504a2c1865c05f4b983107d7c" />
   <meta name="yandex-verification" content="8c5995dc66b40cd5" />
-  
+  <link rel="icon" href="https://jackie.openenet.cn/favicon.ico" type="image/x-icon">
   <!-- 新增：运行时长统计的样式 -->
   <style>
     /* 运行时长数字高亮 */
