--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -20,6 +20,7 @@
   <meta name="360-site-verification" content="0b6524e504a2c1865c05f4b983107d7c" />
   <meta name="yandex-verification" content="8c5995dc66b40cd5" />
   <meta name="msvalidate.01" content="94CC12F9EBDBD5361337329096B6444A" />
+  <link rel="prefetch" as="image" href="https://www.blogsclub.org/badge/jackie.openenet.cn">
   <link rel="icon" href="https://jackie.openenet.cn/favicon.ico" type="image/x-icon">
   <!-- 新增：运行时长统计的样式 -->
   <style>
