新增春节灯笼

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -115,6 +115,9 @@
     updateUptime();
     setInterval(updateUptime, 1000);
   </script>
+  // 灯笼
+<script src="/js/lantern.js"></script>
+//广告
 <script async="async" data-cfasync="false" src="https://pl28675819.effectivegatecpm.com/0f2aeb03ec930e47193f4782e446c5b6/invoke.js"></script>
 <div id="container-0f2aeb03ec930e47193f4782e446c5b6"></div>
 </body>
