增加无聊湾统计，将灯笼移head，广告移入footer

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -16,6 +16,7 @@
   </noscript>
   <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "02045fccf216471184e81448797b3566"}'></script><!-- End Cloudflare Web Analytics -->
   <script defer src="/_vercel/insights/script.js"></script>
+  <script defer src="/third-part/js/lantern.js"></script>
   <meta name="baidu-site-verification" content="codeva-FuIvtGJoyJ" />
   <meta name="360-site-verification" content="0b6524e504a2c1865c05f4b983107d7c" />
   <meta name="yandex-verification" content="8c5995dc66b40cd5" />
@@ -72,8 +73,11 @@
       </div>
     </div>
     <div style="text-align: center; /* 实现水平居中 */">
+      <img height="18px" src="https://boringbay.com/api/badge/jackie.openenet.cn"></img>
       <a href="https://icp.gov.moe/?keyword=20260177" target="_blank">萌ICP备20260177号</a>
     </div>
+<script async="async" data-cfasync="false" src="https://pl28675819.effectivegatecpm.com/0f2aeb03ec930e47193f4782e446c5b6/invoke.js"></script>
+<div id="container-0f2aeb03ec930e47193f4782e446c5b6"></div>
   </footer>
 
   {{ partial('_partials/widgets.njk', {}, {cache: theme.cache.enable}) }}
@@ -115,8 +119,5 @@
     updateUptime();
     setInterval(updateUptime, 1000);
   </script>
-  <script src="/third-part/js/lantern.js"></script>
-<script async="async" data-cfasync="false" src="https://pl28675819.effectivegatecpm.com/0f2aeb03ec930e47193f4782e446c5b6/invoke.js"></script>
-<div id="container-0f2aeb03ec930e47193f4782e446c5b6"></div>
 </body>
 </html>
