增加无聊湾统计

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -45,7 +45,7 @@
   <meta name="msvalidate.01" content="94CC12F9EBDBD5361337329096B6444A" />
 
   <!-- 资源预加载与站点图标 -->
-  <link rel="prefetch" as="image" href="https://www.blogsclub.org/badge/jackie.openenet.cn">
+  <link rel="prefetch" as="image" href="https://boringbay.com/api/badge/jackie.openenet.cn">
   <link rel="icon" href="https://jackie.openenet.cn/favicon.ico" type="image/x-icon">
 
   <!-- 运行时长统计样式 -->
