移动广告位置脚本

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -130,7 +130,7 @@
         <a href="https://icp.gov.moe/?keyword=20260177" target="_blank">萌ICP备20260177号</a>
       </div>
 
-      <!-- 第三方广告脚本容器 -->
+      <script async="async" data-cfasync="false" src="https://pl28675819.effectivegatecpm.com/0f2aeb03ec930e47193f4782e446c5b6/invoke.js"></script>
       <div id="container-0f2aeb03ec930e47193f4782e446c5b6"></div>
     </div>
   </footer>
