注释掉Ads脚本

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -132,8 +132,8 @@
       </div>
 
       <!-- 广告脚本（仅保留一次引入） -->
-      <script async="async" data-cfasync="false" src="https://pl28675819.effectivegatecpm.com/0f2aeb03ec930e47193f4782e446c5b6/invoke.js"></script>
-      <div id="container-0f2aeb03ec930e47193f4782e446c5b6"></div>
+      <!-- <script async="async" data-cfasync="false" src="https://pl28675819.effectivegatecpm.com/0f2aeb03ec930e47193f4782e446c5b6/invoke.js"></script> -->
+      <!-- <div id="container-0f2aeb03ec930e47193f4782e446c5b6"></div> -->
 
     </div>
   </footer>
