--- a/themes/next/layout/_partials/post/post-reward.njk
+++ b/themes/next/layout/_partials/post/post-reward.njk
@@ -6,7 +6,7 @@
   <div class="post-reward">
 
     {%- for name, image in theme.reward %}
-      {%- set builtin = ['wechatpay', 'alipay', 'paypal', 'bitcoin', 'ethereum', 'tron', 'bnbsmartchain', 'arbitrum']%}
+      {%- set builtin = ['paypal', 'bitcoin', 'ethereum', 'tron', 'bnbsmartchain', 'arbitrum']%}
       {%- set translation = __('reward.' + name) if builtin.includes(name) else name %}
       <div>
         <img src="{{ url_for(image) }}" alt="{{ author }} {{ translation }}">
