--- a/themes/next/layout/post.njk
+++ b/themes/next/layout/post.njk
@@ -9,6 +9,8 @@
 
   {{ partial('_macro/post.njk', {post: page}) }}
 
+  {% include '_partials/post-ad.njk' %}
+
 {% endblock %}
 
 {% block sidebar %}
