修复广告位置错位问题

--- a/themes/next/layout/_macro/post.njk
+++ b/themes/next/layout/_macro/post.njk
@@ -105,6 +105,8 @@
       {% else %}
         {{- next_inject('postBodyEnd') }}
 
+        {% include '_partials/post-ad.njk' %}
+
         {%- if post.reward_settings.enable %}
           {{ partial('_partials/post/post-reward.njk') }}
         {%- endif %}
