--- a/themes/next/layout/_partials/post-ad.njk
+++ b/themes/next/layout/_partials/post-ad.njk
@@ -63,8 +63,7 @@
     <li>
       <strong>1. 币安 (Binance)</strong> - 全球头部加密货币交易平台<br>
       新手入门首选，通过我的专属邀请链接注册，可享 <strong>现货/合约手续费永久返佣减免</strong>。<br>
-      👉 专属邀请链接：<a href="  " target="_blank" rel="noopener">点击注册币安</a>
-      <a href="https://downbian.openenet.cn/" target="_blank" rel="noopener">下载币安APP困难，请点击这里下载</a>
+      👉 专属邀请链接：<a href="https://downbian.openenet.cn/" target="_blank" rel="noopener">点击下载币安APP</a>
     </li>
     <li>
       <strong>2. 配套开发/资产工具</strong><br>
