--- a/themes/next/layout/post.njk
+++ b/themes/next/layout/post.njk
@@ -8,6 +8,8 @@
 {% block content %}
 
   {{ partial('_macro/post.njk', {post: page}) }}
+  
+  {% include '_partials/post-ad.njk' %}
 
 {% endblock %}
 
