--- a/themes/next/layout/_macro/post.njk
+++ b/themes/next/layout/_macro/post.njk
@@ -105,7 +105,7 @@
       {% else %}
         {{- next_inject('postBodyEnd') }}
 
-        {{ partial('_partials/post/post-ad.njk') }}
+        {{ partial('themes/next/layout/_partials/post/post-ad.njk') }}
         
         {%- if post.reward_settings.enable %}
           {{ partial('_partials/post/post-reward.njk') }}
