--- a/themes/next/layout/_macro/post.njk
+++ b/themes/next/layout/_macro/post.njk
@@ -104,7 +104,9 @@
         <div class="post-eof"></div>
       {% else %}
         {{- next_inject('postBodyEnd') }}
-        
+
+        {{ partial('themes/next/layout/_partials/post-ad.njk') }}
+
         {%- if post.reward_settings.enable %}
           {{ partial('_partials/post/post-reward.njk') }}
         {%- endif %}
