Add robots meta tag for SEO

--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="{{ url_for(theme.css) }}/noscript.css">
   </noscript>
 
+  <meta name="robots" content="index,follow">
+
   <!-- Cloudflare Web Analytics -->
   <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "02045fccf216471184e81448797b3566"}'></script>
   <!-- End Cloudflare Web Analytics -->
