--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -36,7 +36,7 @@
   <script defer src="/_vercel/insights/script.js"></script>
   
   <!-- 灯笼 -->
-  <script defer src="/third-part/js/lantern.js"></script>
+  <!-- <script defer src="/third-part/js/lantern.js"></script> -->
 
   <!-- 站点验证 Meta 标签 -->
   <meta name="baidu-site-verification" content="codeva-FuIvtGJoyJ" />
