--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -38,6 +38,15 @@
   <!-- 灯笼 -->
   <!-- <script defer src="/third-part/js/lantern.js"></script> -->
 
+  <!-- 临时广告测试 -->
+  <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "vmvt7pyx28");
+  </script>
+
   <!-- 站点验证 Meta 标签 -->
   <meta name="baidu-site-verification" content="codeva-FuIvtGJoyJ" />
   <meta name="360-site-verification" content="0b6524e504a2c1865c05f4b983107d7c" />
