--- a/themes/next/layout/_layout.njk
+++ b/themes/next/layout/_layout.njk
@@ -38,7 +38,7 @@
   <!-- 灯笼 -->
   <!-- <script defer src="/third-part/js/lantern.js"></script> -->
 
-  <!-- 临时广告测试 -->
+  <!-- Microsoft Clarity -->
   <script type="text/javascript">
       (function(c,l,a,r,i,t,y){
           c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
